@@ -2736,11 +2736,11 @@ function delete_agent ($id_agents) {
 		// Delete remote configuration
 		if (isset ($config["remote_config"])) {
 			$agent_md5 = md5 (get_agent_name ($id_agent), FALSE);
-			if (file_exists ($config["remote_config"]."/".$agent_md5.".md5")) {
+			if (file_exists ($config["remote_config"]."/md5/".$agent_md5.".md5")) {
 				// Agent remote configuration editor
-				$file_name = $config["remote_config"]."/".$agent_md5.".conf";
+				$file_name = $config["remote_config"]."/conf/".$agent_md5.".conf";
 				@unlink ($file_name);
-				$file_name = $config["remote_config"]."/".$agent_md5.".md5";
+				$file_name = $config["remote_config"]."/md5/".$agent_md5.".md5";
 				@unlink ($file_name);
 			}
 		}
